# devinshao01

./: .X99-lock  .pylintrc  PR_DESCRIPTION.md  README.md  pyproject.toml
.org.chromium.Chromium.0mGJva/: SingletonCookie
mobile-app/BarMobileApp/: app.json  package.json  pnpm-lock.yaml  tsconfig.json
mobile-app/BarMobileApp/src/: App.tsx
mobile-app/BarMobileApp/src/api/: client.ts  types.ts
mobile-app/BarMobileApp/src/navigation/: MainNavigator.tsx  RootNavigator.tsx  types.ts
mobile-app/BarMobileApp/src/screens/auth/: LoginScreen.tsx
mobile-app/BarMobileApp/src/screens/chat/: ChatScreen.tsx
mobile-app/BarMobileApp/src/screens/main/: HomeScreen.tsx
mobile-app/BarMobileApp/src/screens/menu/: MenuScreen.tsx
mobile-app/BarMobileApp/src/screens/profile/: ProfileScreen.tsx
mobile-app/BarMobileApp/src/screens/scanner/: QRScannerScreen.tsx
mobile-app/BarMobileApp/src/types/: room.ts
services/ai-service/: pyproject.toml
services/ai-service/migrations/versions/: 001_initial.py
services/ai-service/src/: main.py
services/ai-service/src/models/: conversation.py
services/ai-service/src/routes/: chat.py  moderation.py
services/ai-service/src/utils/: openai_client.py  prompt_templates.py
services/live-service/: pyproject.toml
services/live-service/migrations/versions/: 001_initial.py
services/live-service/src/: database.py  main.py
services/live-service/src/models/: room.py
services/live-service/src/routes/: rooms.py
services/live-service/src/utils/: agora.py
services/order-service/: pyproject.toml
services/order-service/migrations/versions/: 001_initial.py
services/order-service/src/: main.py
services/order-service/src/models/: order.py
services/order-service/src/routes/: orders.py  recommendations.py
services/order-service/src/utils/: recommendation_engine.py  validation.py
services/shared/: client.py  middleware.py  qr_service.py
services/shared/database/schemas/: chat_schema.sql  inventory_schema.sql  order_schema.sql  user_schema.sql
services/shared/tests/: test_client.py  test_qr_service.py
services/user-service/: README.md  alembic.ini  pyproject.toml
services/user-service/migrations/: env.py
services/user-service/migrations/versions/: 001_initial.py
services/user-service/src/: main.py
services/user-service/src/middleware/: age_verification.py
services/user-service/src/models/: user.py
services/user-service/src/routes/: auth.py  profile.py  social.py
services/user-service/src/utils/: security.py
src/devinshao01/: agent.py  constraints.py  models.py  recommendations.py
tests/: test_basic_functionality.py  test_recommendations.py
xvfb-run.bs0cYP/: Xauthority
(+1 files in other folders)
